--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-animated-heart": "0.0.7",
     "react-dom": "^18.2.0",
+    "react-heart": "^1.0.6",
     "react-md": "^5.1.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
